<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/tumtum_ia"
            android:textColor="@color/tumtum_ia"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/basic_data"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="0"
            android:hint="@string/age"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Spinner
            android:id="@+id/sp_gender"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:entries="@array/gender"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/vital_indicators"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_bloodPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="0"
            android:hint="@string/blood_pressure"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Spinner
            android:id="@+id/sp_bloodGlucose"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:entries="@array/blood_glucose"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_cholesterol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="0"
            android:hint="@string/cholesterol"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/et_maxHR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="0"
            android:hint="@string/max_HR"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/btn_resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/tumtum_ia"
            android:text="@string/resume"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>
